# godot

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  COPYRIGHT.txt  SConstruct  copyright_builders.py  customize.py  deno.jsonc  methods.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  scu_builders.py  tsconfig.json  turbo.json
.github/workflows/: web_builds.yml
cmake/: Platform.cmake
core/: CMakeLists.txt  SCsub  core_bind.cpp  core_bind.h  register_core_types.cpp
core/config/: CMakeLists.txt  engine.h  project_settings.cpp  project_settings.h
core/crypto/: CMakeLists.txt  SCsub
core/debugger/: CMakeLists.txt
core/error/: CMakeLists.txt  error_macros.h
core/extension/: CMakeLists.txt
core/input/: CMakeLists.txt
core/io/: CMakeLists.txt  compression.cpp  compression.h  config_file.cpp  css.cpp  css.h  dir_access.cpp  dir_access.h  file_access.cpp  file_access.h  file_access_pack.cpp  file_access_pack.h  ip.cpp  remote_filesystem_client.cpp  resource.cpp  resource_loader.cpp  resource_loader.h  web_message_peer.cpp  web_message_peer.h  web_message_server.cpp  web_message_server.h
core/math/: CMakeLists.txt  COPYRIGHT.txt  SCsub  expression.cpp  expression.h
core/object/: CMakeLists.txt  class_db.h  make_virtuals.py  object.h  property_bag.cpp  property_bag.h  ref_counted.h  script_language.h  worker_thread_pool.cpp
core/os/: CMakeLists.txt  condition_variable.h  mutex.h  os.cpp  os.h  semaphore.h  thread.cpp  thread.h
core/string/: CMakeLists.txt  fuzzy_search.cpp  fuzzy_search.h  string_builder.cpp  string_builder.h
core/templates/: CMakeLists.txt
core/variant/: CMakeLists.txt  variant_call.cpp  variant_utility.cpp
doc/classes/: AudioServer.xml  AudioStream.xml  AudioStreamPlayback.xml  DirAccess.xml  EditorInterface.xml  EditorSettings.xml  FileAccess.xml  MicrophoneFeed.xml  MicrophoneServer.xml  OS.xml  ProjectSettings.xml  TextEdit.xml
drivers/alsa/: audio_driver_alsa.h
drivers/apple/: microphone_driver_apple.h  microphone_driver_apple.mm  microphone_driver_avfoundation.h  microphone_driver_avfoundation.mm
drivers/backtrace/: SCsub
drivers/d3d12/: SCsub
drivers/gles3/: rasterizer_scene_gles3.cpp  rasterizer_scene_gles3.h  shader_gles3.cpp
drivers/metal/: SCsub
drivers/png/: SCsub
drivers/pulseaudio/: audio_driver_pulseaudio.cpp  audio_driver_pulseaudio.h  microphone_driver_pulseaudio.cpp  microphone_driver_pulseaudio.h
drivers/sdl/: SCsub  SDL_build_config_private.h
drivers/unix/: CMakeLists.txt  os_unix.cpp  os_unix.h  thread_posix.cpp
drivers/vulkan/: SCsub
drivers/webgpu/: SCsub  rendering_context_driver_webgpu.cpp  rendering_context_driver_webgpu.h  rendering_device_driver_webgpu.cpp  rendering_device_driver_webgpu.h
editor/: code_editor.cpp  code_editor.h  create_dialog.cpp  create_dialog.h  editor_autoload_settings.cpp  editor_file_system.cpp  editor_file_system.h  editor_help.cpp  editor_interface.cpp  editor_interface.h  editor_node.cpp  editor_node.h  editor_plugin_settings.cpp  editor_settings.cpp  editor_settings_dialog.cpp  editor_settings_dialog.h  export_packs_editor.cpp  export_packs_editor.h  project_settings_editor.cpp  project_settings_editor.h  register_editor_types.cpp
editor/export/: editor_export.cpp  editor_export_platform.cpp  editor_export_platform.h  editor_export_platform_apple_embedded.cpp  editor_export_platform_data.h  editor_export_platform_pc.cpp  editor_export_platform_utils.cpp  editor_export_platform_utils.h  editor_export_plugin.cpp  editor_export_plugin.h  gdextension_export_plugin.h  project_export.cpp  project_export.h
editor/gui/: code_editor.cpp  editor_quick_open_dialog.cpp
editor/import/: editor_scene_importer_gltf.cpp
editor/inspector/: editor_resource_picker.cpp  editor_resource_picker.h
editor/plugins/: fetch_export_plugin.cpp  fetch_export_plugin.h  node_3d_editor_plugin.cpp  node_3d_editor_plugin.h  resource_fetcher_editor_plugin.cpp  resource_fetcher_editor_plugin.h  script_editor_plugin.cpp  script_editor_plugin.h  script_text_editor.cpp  script_text_editor.h  text_editor.cpp  text_editor.h
editor/project_manager/: project_dialog.cpp  project_dialog.h
editor/settings/: editor_resource_remap.cpp  editor_resource_remap.h  project_settings_editor.cpp  project_settings_editor.h
editor/themes/: SCsub
main/: CMakeLists.txt  main.cpp
misc/customize/: gui.py  install_dependencies.py
misc/scripts/: copyright_headers.py  process_emscripten_library.ts  run_biomejs.js  run_denofmt.ts  run_pnpm.mjs  setup_denofmt.py  tsconfig.json
misc/utility/: scons_builders.py
modules/: modules_builders.py
modules/basis_universal/: SCsub
modules/betsy/: COPYRIGHT.txt  SCsub
modules/gdscript/: gdscript.cpp  gdscript.h  gdscript_analyzer.cpp  gdscript_analyzer.h  gdscript_cache.cpp  gdscript_cache.h  gdscript_compiler.cpp  gdscript_compiler.h  gdscript_disassembler.cpp  gdscript_editor.cpp  gdscript_format.cpp  gdscript_format.h  gdscript_function.cpp  gdscript_parser.cpp  gdscript_parser.h  gdscript_tokenizer.cpp  gdscript_tokenizer.h
modules/glslang/: SCsub
modules/godot_physics_2d/: COPYRIGHT.txt
modules/godot_physics_3d/: COPYRIGHT.txt
modules/interactive_music/: audio_stream_interactive.cpp
modules/jolt_physics/: COPYRIGHT.txt
modules/lightmapper_rd/: COPYRIGHT.txt
modules/minimp3/: audio_stream_mp3.cpp  audio_stream_mp3.h
modules/multiplayer/: multiplayer_spawner.cpp
modules/navigation/: nav_map.cpp  nav_region.cpp
modules/openxr/: openxr_api.cpp  openxr_interface.cpp
modules/raycast/: raycast_occlusion_cull.cpp
modules/svg/: register_types.cpp
modules/vorbis/: audio_stream_ogg_vorbis.cpp  (+1 more)
platform/: CMakeLists.txt
platform/linuxbsd/: CMakeLists.txt  SCsub  microphone_linuxbsd_alsa.cpp  microphone_linuxbsd_alsa.h  microphone_linuxbsd_pulseaudio.cpp  microphone_linuxbsd_pulseaudio.h  os_linuxbsd.cpp  os_linuxbsd.h
platform/linuxbsd/export/: export_plugin.cpp
scene/: register_scene_types.cpp  scene_string_names.h
servers/: SCsub  audio_server.cpp  audio_server.h  register_server_types.cpp
(+361 files in other folders)
